--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1 id="titulo"><a href="sitdroid.html" target="_self"">CURIOSIDADES DE TECNOLOGIA</a></h1>
+        <h1 id="titulo"><a href="index.html" target="_self"">CURIOSIDADES DE TECNOLOGIA</a></h1>
         <p>Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um único lugar</p>
         <nav id="menu">
             <ul>
@@ -46,7 +46,7 @@
                 <img src="midia/bugdroid.png" alt="Imagem do Bugdroid">
                 <p>A principal inspiração para os traços do novo <strong>Bugdroid</strong> veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do <strong>Google</strong> e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.</p>
             </section>
-            <div><iframe width="560" height="315" src="https://www.youtube.com/embed/l2UDgpLz20M?si=B0E-SqJOc_kOJikf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+            <div><iframe width="100%" min-width="485" max-width="900" height="500" src="https://www.youtube.com/embed/l2UDgpLz20M?si=B0E-SqJOc_kOJikf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
         </article>
         <article id="sec">
             <aside>
